ChnageLog
=========

0.3.0.dev0

0.2.0 (2020-12-14)

    * get_token method called in Printer.loop
    * Python 3.9 check
    * api_key in INFO event
    * metadata in file_info
    * preview in metadata

0.1.3 (2020-12-01)

    * Printer object without sn, fingerprint, server and token
    * Revert ability to use any Command class as it seems too confusing